Added a signature link

--- a/src/style.css
+++ b/src/style.css
@@ -121,3 +121,9 @@ button {
   font-size: 15px;
   background-color: #ffffff;
 }
+
+.signature {
+  display: block;
+  text-align: center;
+  font-size: 12px;
+}
